--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   font-family: "Mochiy Pop One", sans-serif;
   background-color: var(--bg);
   color: rgb(252, 254, 255);
+  min-height: 2000px;
 }
 
 /* navbar */
@@ -41,7 +42,7 @@ body {
 }
 
 .navbar .logo span {
-  color: rgba(160, 91, 12, 0.8);
+  color: rgba(212, 143, 63, 0.8);
   font-style: normal;
   font-size: 22px;
 }
@@ -72,7 +73,7 @@ body {
   margin: 0 0.5rem;
 }
 
-#hamburger-menu{
+#hamburger-menu {
   display: none;
 }
 
@@ -84,6 +85,42 @@ body {
   background-image: url(../gambar/kohi.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+/* content: ; */
+.hero ::after {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba(1, 1, 3, 1) 3%,
+    rgba(255, 255, 255, 0) 25%
+  );
+}
+
+.hero .konten {
+  display: inline-block;
+  font-size: 2rem;
+  margin-bottom: 20%;
+}
+
+.hero .konten span {
+  color: #52320d;
+  stroke: #010101;
+}
+.hero .konten a {
+  font-family: Verdana;
+  font-weight: 100;
+  padding: 1rem;
+  color: #f5f4f4;
+  display: inline-block;
+  margin: 10%;
+  background-color: #5f3402b2;
+  border-radius: 8px;
 }
 
 /* Media */
@@ -115,10 +152,17 @@ body {
     position: absolute;
     top: 100%;
     right: -100%;
-    background-color: #db1414;
-    width: 30rem;
+    background-color: rgba(29, 28, 28, 0.281);
+    width: 28rem;
     height: 100vh;
-    transition: 0.2s;
+    transition: 0.4s;
+  }
+
+  .navbar .navbar-nav a {
+    display: block;
+    margin: 1.5rem;
+    font-size: 80x;
+    padding: 2%;
   }
 
   .navbar .navbar-nav.active {
@@ -132,5 +176,34 @@ body {
     background-image: url(../gambar/kopi.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  .hero .konten {
+    margin-bottom: 50%;
+    color: #b9b9b6;
+    font-size: 1.8rem;
+    font-family: Josefin-san;
+    display: inline-block;
+    margin-left: 10%;
+  }
+
+  .hero .konten p {
+    display: inline-block;
+    margin-left: 5%;
+  }
+
+  .cta {
+    font-family: sans-serif;
+    font-size: 70%;
+    color: #b9b9b6;
+    display: inline-block;
+    margin: 10%;
+    background-color: #b16107;
+    padding: 10%;
+    border-radius: 3px;
+  }
+
+  .hero .konten span {
+    color: #b96e0b;
   }
 }
